--- a/ingress/default.conf.template
+++ b/ingress/default.conf.template
@@ -15,6 +15,8 @@ server {
 
   location /health {
     proxy_pass http://health;
+    access_log off;
+    return 200 "Successful Update!\n";
   }
 
   error_page 500 502 503 504 /50x.html;
