--- a/ingress/default.conf.template
+++ b/ingress/default.conf.template
@@ -34,7 +34,7 @@ server {
   location /health {
     access_log off;
     access_log off;
-    return 200 "Successful Update!\n";
+    return 200 "Successfull Update!\n";
   }
 
   error_page 500 502 503 504 /50x.html;
